# staff_system

./: .env.example  .gitignore  README.md  pyproject.toml  staff_system_architecture_design.md
frontend/: app.py
src/: __init__.py
src/adapters/: __init__.py  anthropic_adapter.py  base.py  google_adapter.py  openai_adapter.py
src/api/: __init__.py  handlers.py  main.py  rate_limiter.py  routes.py
src/graph/: __init__.py  edges.py  graph.py  nodes.py
src/models/: __init__.py  context.py  proposal.py  state.py
src/prompts/: __init__.py  architect.py  auditor.py  engineer.py  refinement.py  supervisor.py
src/utils/: __init__.py  config.py  logger.py  metrics.py  progress.py  resilience.py  sanitization.py  storage.py
tests/: __init__.py  test_adapters.py  test_api.py  test_api_connectivity.py  test_e2e_follow_up.py  test_end_to_end.py  test_follow_up.py  test_graph.py  test_rate_limiter.py  test_resilience.py  test_sanitization.py
