[project]
name = "synapse-council"
version = "0.1.0"
description = "Multi-AI Staff System for Architecture Review"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LangGraph for state machine orchestration
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    
    # AI Provider SDKs
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-google-genai>=2.0.0",
    
    # API Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    
    # Frontend
    "streamlit>=1.40.0",
    
    # Data validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
